--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.22.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-native-code-push": "^5.4.2",
     "react-native-material-ui": "^1.30.1",
     "react-native-splash-screen": "^3.1.1",
     "react-native-vector-icons": "^5.0.0",
